Puse un titulo a la pagina

--- a/slider.html
+++ b/slider.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+	<title>Bienvenido a la Whisqueria DSW</title>
 		<style>
 		
 @keyframes aparecer {
@@ -63,6 +64,8 @@ function prevSlide(){
   </head>
   <body>
     <!-- Document content -->
+	
+	<h1>Bienvenido a nuestra Whisquería</h1>
 	
 	<div id="carrusel" >
 	
